6792301: StackAlignmentInBytes not honored for compiled native methods

Fixed the stack misalignment when generate_native_wrapper is called.

Reviewed-by: never, kamg, kvn, phh